# bitcoin_risk

./: README.md  bitcoin_risk.ipynb  envionment.yaml  environment.yaml  ethereum_risk.ipynb  pyproject.toml
bitcoin_risk/: plotter.py  risk.py
data/: BTCUSD_2024_11_21.csv
docs/: btc_risk.html  eth_risk.html  index.html  risk.html  sortino.html  style.css
